<resources>
    <string name="app_name">Inksell</string>

    <string name="hello_world">Hello Inksell!</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="action_forward">Forward</string>
    <string name="action_clearAll">Clear All</string>

    <string name="register">Register</string>
    <string name="registering">Registering...</string>
    <string name="verify">Verify</string>
    <string name="verifying">Verifying...</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="updating">Updating...</string>
    <string name="already">Already Registered ?</string>
    <string name="cannot_find">Cannot find company or location ?</string>
    <string name="save_changes">Save Changes</string>

    <string name="addingNewCompany">Adding new company...</string>
    <string name="saving">Saving...</string>
    <string name="addTag">Adding subscription</string>
    <string name="removeTag">Removing subscription</string>

    <string name="title_activity_register_activity">Register</string>
    <string name="title_activity_verify_activity">Verify</string>
    <string name="title_activity_already_activity">Already Registered</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="title_activity_user_details">Profile</string>
    <string name="title_activity_new_company">Register</string>

    <string name="ErrorTryAgain">Try Again</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello Home fragment</string>
    <string name="hello_settings_fragment">Hello Settings fragment</string>
    <string name="title_activity_view_post">ViewPost</string>

    <string name="yesterday">yesterday</string>
    <string name="title_activity_view_post_common">ViewPostCommon</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>

    <string name="cardTitlePicTransition">cardViewTitleImageTransition</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_post">Add Post</string>

    <string name="category_all">All</string>
    <string name="category_electronics">Electronics</string>
    <string name="category_furniture">Furniture</string>
    <string name="category_other">Other</string>
    <string name="category_multiple">Multiple Items</string>
    <string name="category_autos">Automobile</string>
    <string name="category_realestate">Real Estate</string>
    <string name="title_activity_my_account">MyAccount</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_edit_my_details">My Profile</string>
    <string name="title_activity_fullscreen_view">fullscreen_view</string>
    <string name="title_activity_add_multiple">Add Multiple Posts</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_view_multiple">ViewMultipleActivity</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
</resources>
