<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <EditText android:textSize="30sp"
        android:layout_margin="16dp"
        style="@style/MyEditTextTheme"
        android:fontFamily="sans-serif-light"
        android:layout_width="match_parent"
        android:id="@+id/add_post_multiple_title"
        android:hint="@string/title"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_below="@+id/add_post_multiple_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_margin="16dp"
            android:text="@string/submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            style="@style/ButtonPrimary"
            android:id="@+id/add_submit"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="#000000"
            android:alpha="0.5"
            android:id="@+id/cvHomeTransparency"
            android:visibility="gone"
            ></android.support.v7.widget.CardView>


    </FrameLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fab_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        fab:fab_addButtonColorNormal="@color/pink"
        fab:fab_addButtonColorPressed="@color/pink_pressed"
        fab:fab_addButtonPlusIconColor="@color/white"
        fab:fab_labelStyle="@style/menu_labels_style"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_furniture"
            fab:fab_size="mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="@string/category_furniture"
            fab:fab_colorPressed="@color/white_pressed" />


        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_realestate"
            fab:fab_size="mini"
            fab:backgroundTint="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="@string/category_realestate"
            fab:fab_colorPressed="@color/white_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_electronics"
            fab:fab_size="mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="@string/category_electronics"
            fab:fab_colorPressed="@color/white_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_autos"
            fab:fab_size="mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="@string/category_autos"
            fab:fab_colorPressed="@color/white_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_other"
            fab:fab_size="mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="@string/category_other"
            fab:fab_colorPressed="@color/white_pressed"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>
