<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:id="@+id/layoutContainer" android:orientation="horizontal"
    android:background="@drawable/splash">
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15">
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.7">

        <!-- This is the part that's 70% of the total width. I'm inserting a LinearLayout and buttons.-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:id="@+id/start_layout_buttons"
            android:visibility="gone"
            android:layout_alignParentBottom="true">

            <Button
                android:text="@string/register"
                android:padding="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                style="@style/ButtonDarkRed"
                android:layout_marginBottom="5dp"
                android:onClick="register_click">
            </Button>
            <Button
                android:layout_marginTop="5px"
                android:padding="10dp"
                android:text="@string/verify"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                style="@style/ButtonLightRed"
                android:onClick="verify_click">
            </Button>
            <Button
                android:text="@string/already"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="already_click">
            </Button>

        </LinearLayout>
        <!-- 70% Width End-->

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15">
    </RelativeLayout>

</LinearLayout>